fix: tooltip alignment

--- a/src/components/ColorTokenTable/color-token-table.scss
+++ b/src/components/ColorTokenTable/color-token-table.scss
@@ -74,7 +74,7 @@
   justify-content: space-between;
 }
 
-.color-token-value .cds--overflow-menu {
+.color-token-value .cds--overflow-men__wrapper {
   margin-left: $spacing-03;
   margin-top: -$spacing-03;
 }
